--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,6 +57,7 @@ jobs:
       - run: npm run build-win --if-present
       - run: move .\dist\nsis-web\*.exe .\dist\
       - run: move .\dist\nsis-web\*.7z .\dist\
+      - run: move .\dist\nsis-web\*.appx .\dist\
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
